--- a/Final/paper.tex
+++ b/Final/paper.tex
@@ -29,6 +29,7 @@
 \onehalfspacing
 
 \usepackage{csquotes}
+\usepackage{amssymb}
 
 \setlength{\parindent}{0pt}
 
@@ -47,7 +48,5 @@
 \include{chapters/numerical}
 \include{chapters/approx}
 \include{chapters/integration}
-
-
 
 \end{document}
